check if events have been handled already before dispatching them; r=saari; bug #45390